YAML for K8/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sampleApp1
  labels:
    role: sample-role
    app: nginx
spec:
  containers:
  - name: webserver1
    image: nginx:1.6
    ports:
    - containerPort: 80
  - name: database
    image: mysql-3.2
    ports:
    - containerPort: 3306
volumes:
  - name: webserver-storage
    emptyDir: {}
