YAML for K8/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: load-balancer
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80

# extra->domain-name
